<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_settings"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_address"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/protocolField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_protocol"
                    android:inputType="text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="2"/>

                <EditText
                    android:id="@+id/ipField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint_ip"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_port"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="2"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <EditText
                    android:id="@+id/portField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_port"
                    android:inputType="numberDecimal"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_postfix"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="2"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <EditText
                    android:id="@+id/postfixField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint_postfix"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/settingsCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/label_cancel"/>

                <Button
                    android:id="@+id/settingsSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/label_save"/>

            </LinearLayout>

        </LinearLayout>

</RelativeLayout>