<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_uid"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tagUidValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="3"/>

            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_employee"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/tagEmployee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/hint_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_department"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/tagDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/hint_department"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <!--RelativeLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp">

                    <ImageView
                        android:id="@+id/tagAddDepartment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_add" />

                    <ImageView
                        android:id="@+id/tagSaveDepartment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_check" />

                </RelativeLayout-->

                <!--ImageView
                    android:id="@+id/tagAddDepartment"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    app:srcCompat="@drawable/ic_add" /-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/tagCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/label_cancel"/>


                <Button
                    android:id="@+id/tagSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/label_save"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>

























