<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_dark"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:textAppearanceLarge"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginStart="10dp"
                android:text="@string/app_name"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/mainMenu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/ic_settings"
                android:contentDescription="@string/label_menu"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/nfcImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/label_default"
                android:src="@drawable/ic_default"/>

            <TextView
                android:id="@+id/nfcTextUnderImage"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/label_default"/>

        </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>